ava-rs/tui/src/chatwidget/snapshots/ava_tui__chatwidget__tests__windows_sandbox_unelevated_policy.snap
---
source: tui/src/chatwidget/tests/permissions.rs
expression: "render_bottom_popup(&chat, 100)"
---
  Set up the Ava agent sandbox to protect your files and control network access. Learn more
  <https://developers.openai.com/codex/windows>


› 1. Use non-admin sandbox (higher risk if prompt injected)
  2. Quit

  enter select · esc back
